fix navbar image on mobile (#18)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,6 +340,13 @@ pre {
     -webkit-transform-origin: unset;
     transform-origin: unset;
   }
+  .navbar {
+    padding: 0px;
+  }
+  
+  .navbar-brand img {
+    max-height: 24px;
+  }
 }
 
 .navbar .dropdown-menu.view {
@@ -443,16 +450,6 @@ pre {
   border-radius: 0 0 25px 25px;
   z-index: 9999;
   box-shadow: 0px 13px 20px 0px rgba(0, 0, 0, .07)
-}
-
-@media (max-width: 413px) {
-  .navbar {
-  padding: 0px;
-  }
-
-  .navbar-brand img {
-  max-height: 24px;
-  }
 }
 
 @media (max-width: 575px) {
